modify requirements for ranking and schedule modification. Start API implementation. Add tests
